--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "OpenSeadragon",
+  "name": "OpenSeadragon Web Site",
   "version": "0.9.122",
   "description": "Provides a smooth, zoomable user interface for HTML/Javascript.",
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-contrib-compress": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-qunit": "~0.1.1",
     "grunt-contrib-connect": "~0.1.2",
     "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-clean": "~0.4.0"
   },
   "scripts": {
     "test": "grunt test"
